On hiatus until Wildcraft Herbs & Spices is updated
-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
-- pomace wine no longer crashes

2.0.0-dev.6
- Meathook placements adjusted yet again
- Yogurt can be added to fruit bars in place of gelatin
- Pemmican can be placed in stacks
- Do stuff with bamboo shoots? idk
- Irontack can be thrown as a rock/used as sling ammo

HANDBOOK THINGS:
- Muffins and fruit bread have default visuals in the handbook
- Sap collecting info moved from handbook guide to spile and sap entries - DONE!!!
- More handbook items linked together 

REBALANCING:
- Total review of how "nutritionPropsWhenInMeal" is used; removed from cheese patch since vanilla already has this property
- All charred food has the worst nutrition value to compensate for having the longest perish timer
- Dried fruit rehydrates in meals via cookedStack property
- Cheese in meal patched removed; now handled in vanilla - DONE!!!

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
- WHY ARE FRIED BALLS DOING IT TOO????
- Peanut butter fixed so it gives nutrients when in bowl/bucket

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed
- FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
- use the new 'NutritionPropertiesPerLitreInMeal' stuff
- Healing over time implemented for all items
- Soulstorm Brew makes you psychedelic now?
- Items can go into crocks? New labels for everything?


2.0.0-dev.5
REBALANCING: