@@ -49,6 +49,9 @@
     "itemdesc-cookedveggie-*-partbaked": "Could use a bit more baking...",
     "itemdesc-cookedveggie-*-perfect": "Perfectly cooked and delicious!",
     "itemdesc-cookedveggie-*-charred": "It's overcooked, but at least it lasts longer...",
+    "item-handbooktitle-cookedveggie": "Cooked Vegetable",
+    "item-handbooktext-cookedveggie": "Cooking vegetables breaks apart their cell walls, making them far easier to digest - and usually a bit tastier, to boot. Vegetables are best when simmered in a <a href=\"handbook://block-aculinaryartillery:saucepan-blue-fired\">saucepan</a> or <a href=\"handbook://block-aculinaryartillery:cauldron-iron\">cauldron</a>.",
+
 
   "item-dryfruit-blueberry": "Dried blueberry",
   "item-dryfruit-cranberry": "Dried cranberry",
@@ -69,6 +72,9 @@
   "item-dryfruit-pomegranate": "Dried pomegranate",
   "item-dryfruit-breadfruit": "Dried breadfruit",
   "itemdesc-dryfruit-*": "Baked into a highly preservable state.",
+  "item-handbooktitle-dryfruit": "Dried Fruit",
+  "item-handbooktext-dryfruit": "The simplest way to preserve fruit long-term. Cooking these in a meal will 'rehydrate' them, providing all the nutrition of raw fruit.",
+
 
   "item-meatnugget-bushmeat-smashed": "Smashed bushmeat",
   "item-meatnugget-poultry-smashed": "Smashed poultry",
@@ -153,6 +159,9 @@
   "game:meal-ingredient-stew-primary-breadcrumbs-flax": "flax bread crumbs",
   "game:meal-ingredient-stew-secondary-breadcrumbs-flax": "flax bread crumbs",
   "itemdesc-breadcrumbs-*": "Bread, but powdery. Great for thickening stews and soups. Good chicken feed, too.",
+  "item-handbooktitle-breadcrumbs": "Bread Crumbs",
+  "item-handbooktext-breadcrumbs": "Crumbled bread, the ideal breading for any fried food. When eaten in a meal, a singular handful of crumbs is as nutritious as 1/4th of a basic loaf of bread.",
+
 
   "item-acornbreadcrumbs-acornspelt": "Acorn-spelt bread crumbs",
   "item-acornbreadcrumbs-acornrye": "Acorn-rye bread crumbs",
@@ -777,6 +786,9 @@
   "item-choppedvegetable-pickledparsnip": "Chopped pickled parsnip",
   "item-choppedvegetable-pickledpumpkin": "Chopped pickled pumpkin",
   "itemdesc-choppedvegetable-*": "Chopped away all the inedible bits!",
+  "item-handbooktitle-choppedvegetable": "Chopped Vegetable",
+  "item-handbooktext-choppedvegetable": "Cutting up vegetables makes them easier to put into certain foods.",
+
 
   "game:recipeingredient-item-choppedvegetable-carrot": "chopped carrots",
   "game:recipeingredient-item-choppedvegetable-carrot-insturmentalcase": "chopped carrots",
@@ -909,6 +921,8 @@
   "itemdesc-cookedchoppedvegetable-*-partbaked": "Could use a bit more baking...",
   "itemdesc-cookedchoppedvegetable-*-perfect": "Perfectly cooked and delicious!",
   "itemdesc-cookedchoppedvegetable-*-charred": "It's overcooked, but at least it lasts longer...",
+  "item-handbooktitle-cookedchoppedvegetable": "Cooked Chopped Vegetable",
+  "item-handbooktext-cookedchoppedvegetable": "Cooking vegetables breaks apart their cell walls, making them far easier to digest - and usually a bit tastier, to boot. Vegetables are best when simmered in a <a href=\"handbook://block-aculinaryartillery:saucepan-blue-fired\">saucepan</a> or <a href=\"handbook://block-aculinaryartillery:cauldron-iron\">cauldron</a>.",
 
   "game:recipeingredient-item-cookedchoppedvegetable-carrot-partbaked": "chopped carrots",
   "game:recipeingredient-item-cookedchoppedvegetable-carrot-partbaked-insturmentalcase": "chopped carrots",
@@ -1367,12 +1381,21 @@
   "item-sushi-veggie-honey": "Honey vegetable sushi roll",
   "item-sushi-noveggie-peanut": "Peanut sushi roll",
   "item-sushi-veggie-peanut": "Peanut vegetable sushi roll", 
+  
   "item-driedseaweed-mash": "Mashed seaweed",
-  "itemdesc-driedseaweed-mash": "Use your hands to shape into sheets.",
-  "item-driedseaweed-sheet": "Seaweed sheet",
-  "itemdesc-driedseaweed-sheet": "Bake until crunchy.",
-  "item-driedseaweed-edible": "Dried seaweed",
+  "itemdesc-driedseaweed-mash": "Wash in cold water to remove the gunk.",
+  "item-driedseaweed-washed": "Washed seaweed",
+  "itemdesc-driedseaweed-washed": "Use your hands to shape into sheets.",
+  "item-driedseaweed-sheet": "Wet seaweed sheet",
+  "itemdesc-driedseaweed-sheet": "Let it air-dry.",
+  "item-driedseaweed-dried": "Dried seaweed sheet",
+  "itemdesc-driedseaweed-dried": "Bake until crunchy.",
+  "item-driedseaweed-edible": "Edible seaweed sheet",
   "itemdesc-driedseaweed-edible": "Used with raw fish and rice to make sushi.",
+  "item-handbooktitle-driedseaweed": "Seaweed sheet",
+  "item-handbooktext-driedseaweed": "A critical ingredient in <a href=\"handbook://item-expandedfoods:sushi-noveggie-nooil\">sushi</a>, seaweed sheets are produced in a manner similar to paper. Ground to a paste, then washed with water, formed into sheets, and air-dried, the resulting sheets are roasted in an oven to maximize flavor and longevity.",
+  
+
   "itemdesc-sushi-noveggie-nooil": "A naked sushi roll. Come on, spice it up!",
   "itemdesc-sushi-veggie-nooil": "A veggie sushi roll.",
   "itemdesc-sushi-noveggie-oil": "A high-end sushi roll. Delicious!",
@@ -3886,7 +3909,10 @@
   "itemdesc-agedmeat-*-meatballpartbaked": "Could use a little more cooking...",
   "itemdesc-agedmeat-*-meatball": "It falls apart at the touch!",
   "itemdesc-agedmeat-*-meatballcharred": "Overcooked, but still delicious!",
-
+  
+  "item-handbooktitle-agedmeat": "Dry Aged Meat",
+  "item-handbooktext-agedmeat": "After being hung on a <a href=\"handbook://block-aculinaryartillery:meathooks-ebony-tinbronze-east\">meat rack</a> in a dry, cool environment for some time, meat slowly loses weight as its connective tissue breaks down and internal moisture evaporates. A 'crust' of fungal mold covers the exterior and must be removed before consumption.<br>The smaller, more tender nature of this meat makes it ill-suited for advanced meat processing techniques such as <a href=\"handbook://item-expandedfoods:sausage-redmeat-raw\">sausages</a>.",
+  
   "game:recipeingredient-item-agedmeat-bushmeat-tender": "aged bushmeat",
   "game:recipeingredient-item-agedmeat-poultry-tender": "aged poultry",
   "game:recipeingredient-item-agedmeat-redmeat-tender": "aged redmeat",
@@ -6047,8 +6073,11 @@
   "item-choppedmushroom-whiteoyster": "Chopped white oyster",
   "item-choppedmushroom-witchhat": "Chopped witch's hat",
   "itemdesc-choppedmushroom-*": "This would be more digestible in a meal...",
+  "item-handbooktitle-choppedmushroom": "Chopped Mushroom",
+  "item-handbooktext-choppedmushroom": "Slicing mushrooms makes them easier to put into certain foods. However, cooking them over an oven or firepit will 'cook' some of the poison out, making some mushrooms more edible.",
 
-    "game:recipeingredient-item-choppedmushroom-almondmushroom": "chopped almond mushroom",
+
+  "game:recipeingredient-item-choppedmushroom-almondmushroom": "chopped almond mushroom",
     "game:recipeingredient-item-choppedmushroom-almondmushroom-insturmentalcase": "chopped almond mushroom",
     "recipeingredient-item-choppedmushroom-almondmushroom": "chopped almond mushroom",
     "recipeingredient-item-choppedmushroom-almondmushroom-insturmentalcase": "chopped almond mushroom",
@@ -6419,6 +6448,9 @@
   "item-cookedchoppedmushroom-witchhat-partbaked": "Cooked chopped witch's hat (part-baked)",
   "item-cookedchoppedmushroom-witchhat-perfect": "Cooked chopped witch's hat",
   "item-cookedchoppedmushroom-witchhat-charred": "Cooked chopped witch's hat (charred)",
+  "item-handbooktitle-cookedchoppedmushroom": "Cooked Chopped Mushroom",
+  "item-handbooktext-cookedchoppedmushroom": "Burning a mushroom might ruin the flavor, but at least the poison cooks out. Poisonous mushrooms are best left on the firepit - non-poisonous ones are best when simmered in a <a href=\"handbook://block-aculinaryartillery:saucepan-blue-fired\">saucepan</a> or <a href=\"handbook://block-aculinaryartillery:cauldron-iron\">cauldron</a>.",
+
 
   "game:recipeingredient-item-cookedchoppedmushroom-almondmushroom-partbaked": "chopped almond mushroom",
   "game:recipeingredient-item-cookedchoppedmushroom-almondmushroom-partbaked-insturmentalcase": "chopped almond mushroom",
@@ -7265,8 +7297,11 @@
 	"item-cookedmushroom-pinkbonnet-charred": "Cooked pinkbonnet (charred)",
 	"item-cookedmushroom-shiitake-charred": "Cooked shiitake (charred)",
 	"item-cookedmushroom-witchhat-charred": "Cooked witch's hat (charred)",
+    "item-handbooktitle-cookedmushroom": "Cooked Mushroom",
+    "item-handbooktext-cookedmushroom": "Burning a mushroom might ruin the flavor, but at least the poison cooks out. Poisonous mushrooms are best left on the firepit - non-poisonous ones are best when simmered in a <a href=\"handbook://block-aculinaryartillery:saucepan-blue-fired\">saucepan</a> or <a href=\"handbook://block-aculinaryartillery:cauldron-iron\">cauldron</a>.",
 
-    "game:recipeingredient-item-egg-pheasant-raw": "pheasant eggs",
+
+  "game:recipeingredient-item-egg-pheasant-raw": "pheasant eggs",
     "game:recipeingredient-item-egg-pheasant-raw-insturmentalcase": "pheasant eggs",
     "recipeingredient-item-egg-pheasant-raw": "pheasant eggs",
     "recipeingredient-item-egg-pheasant-raw-insturmentalcase": "pheasant eggs",
@@ -7370,9 +7405,12 @@
   "item-dehydratedfruit-lychee": "Dehydrated lychee",
   "item-dehydratedfruit-pomegranate": "Dehydrated pomegranate",
   "item-dehydratedfruit-breadfruit": "Dehydrated breadfruit",
-    "itemdesc-dehydratedfruit-*": "Squeezed dry.",
+  "itemdesc-dehydratedfruit-*": "Squeezed dry.",
+  "item-handbooktitle-dehydratedfruit": "Dehydrated Fruit",
+  "item-handbooktext-dehydratedfruit": "A byproduct of juicing fruit in a <a href=\"handbook://block-fruitpress-ns\">fruit press</a>. Cooking these in a meal will 'rehydrate' them, providing all the nutrition of raw fruit.",
 
-    "game:recipeingredient-item-dehydratedfruit-blueberry": "blueberries",
+
+  "game:recipeingredient-item-dehydratedfruit-blueberry": "blueberries",
     "game:recipeingredient-item-dehydratedfruit-blueberry-insturmentalcase": "blueberries",
     "recipeingredient-item-dehydratedfruit-blueberry": "blueberries",
     "recipeingredient-item-dehydratedfruit-blueberry-insturmentalcase": "blueberries",
@@ -9133,6 +9171,9 @@
     "item-candiedfruit-saguaro": "Candied saguaro",
     "item-candiedfruit-whitecurrant": "Candied white currant",
     "itemdesc-candiedfruit-*": "The sweetest of treats! Eating them will make you feel better than ever.",
+    "item-handbooktitle-candiedfruit": "Candied Fruit",
+    "item-handbooktext-candiedfruit": "Once heated enough, fruit syrup will harden and can be molded into hard candy. The fruit core provides an excellent contrast to the brittle shell. Its texture is more glassy than crystalline.",
+
 
   "game:recipeingredient-item-candiedfruit-blueberry": "candied blueberries",
   "game:recipeingredient-item-candiedfruit-cranberry": "candied cranberries",
@@ -9598,7 +9639,7 @@
   "game:handbook-mealingredient-fruitcandy": "candied fruit",
 
   "game:item-handbooktitle-fruitpress": "Fruitpress notes",
-  "game:item-handbooktext-fruitpress": "You can only use the fruit press if it is at LEAST half-full. Anything less and the press will not squish any material.",
+  "game:item-handbooktext-fruitpress": "You can only use the fruit press if it is at LEAST half-full. Anything less and the press will not squish any material. Be sure to check and see if your mash can be used for anything!",
   
   "item-washedeggshell": "Washed egg shells",
   "itemdesc-washedeggshell": "Purified by water, ready for pressure.",
