@@ -85,6 +85,7 @@ On hiatus until Wildcraft Herbs & Spices is updated
 - Pemmican can be placed in stacks
 - Do stuff with bamboo shoots? idk
 - Irontack can be thrown as a rock/used as sling ammo
+- Meal text updated to be more like vanilla
 
 HANDBOOK THINGS:
 - Muffins and fruit bread have default visuals in the handbook
@@ -96,6 +97,8 @@ REBALANCING:
 - All charred food has the worst nutrition value to compensate for having the longest perish timer
 - Dried fruit rehydrates in meals via cookedStack property
 - Cheese in meal patched removed; now handled in vanilla - DONE!!!
+- Dried seaweed production chain lengthened; now it must be washed and dried before roasting in the oven - DONE!!!
+- Dried seaweed nutrition buffed from 20 to 30; nutritionPropsWhenInMeal buffed from 30 to 45 - DONE!!!
 
 BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
